feat: add api to fetch change in wip
