# controller/wip_ctl.go
@@ -6,6 +6,7 @@ import (
 	"encoding/hex"
 	"fmt"
 	"net/http"
+	"strings"
 	"time"
 
 	"github.com/jiaozifs/jiaozifs/auth"
@@ -45,15 +46,15 @@ func (wipCtl WipController) CreateWip(ctx context.Context, w *api.JiaozifsRespon
 		return
 	}
 
-	baseCommitID, err := hex.DecodeString(params.BaseCommitID)
+	baseCommit, err := wipCtl.Repo.ObjectRepo().Commit(ctx, ref.CommitHash)
 	if err != nil {
 		w.Error(err)
 		return
 	}
 
 	wip := &models.WorkingInProcess{
-		CurrentTree:  baseCommitID,
-		BaseTree:     baseCommitID,
+		CurrentTree:  baseCommit.TreeHash,
+		BaseCommit:   ref.CommitHash,
 		RepositoryID: repo.ID,
 		RefID:        ref.ID,
 		State:        0,
@@ -155,7 +156,7 @@ func (wipCtl WipController) CommitWip(ctx context.Context, w *api.JiaozifsRespon
 		return
 	}
 
-	if !bytes.Equal(commit.TreeHash, wip.BaseTree) {
+	if !bytes.Equal(commit.Hash, wip.BaseCommit) {
 		w.Error(fmt.Errorf("base commit not equal with branch, please update wip"))
 		return
 	}
@@ -172,8 +173,8 @@ func (wipCtl WipController) CommitWip(ctx context.Context, w *api.JiaozifsRespon
 			return err
 		}
 
-		wip.BaseTree = commit.Commit().TreeHash //set for response
-		err = repo.WipRepo().UpdateByID(ctx, models.NewUpdateWipParams(wip.ID).SetBaseTree(commit.Commit().TreeHash))
+		wip.BaseCommit = commit.Commit().Hash //set for response
+		err = repo.WipRepo().UpdateByID(ctx, models.NewUpdateWipParams(wip.ID).SetBaseCommit(wip.BaseCommit))
 		if err != nil {
 			return err
 		}
@@ -220,4 +221,87 @@ func (wipCtl WipController) DeleteWip(ctx context.Context, w *api.JiaozifsRespon
 	}
 
 	w.OK()
+}
+
+func (wipCtl WipController) GetWipChanges(ctx context.Context, w *api.JiaozifsResponse, r *http.Request, repositoryName string, params api.GetWipChangesParams) {
+	user, err := auth.GetUser(ctx)
+	if err != nil {
+		w.Error(err)
+		return
+	}
+
+	repository, err := wipCtl.Repo.RepositoryRepo().Get(ctx, models.NewGetRepoParams().SetName(repositoryName))
+	if err != nil {
+		w.Error(err)
+		return
+	}
+
+	ref, err := wipCtl.Repo.RefRepo().Get(ctx, models.NewGetRefParams().SetName(params.RefName))
+	if err != nil {
+		w.Error(err)
+		return
+	}
+
+	wip, err := wipCtl.Repo.WipRepo().Get(ctx, models.NewGetWipParams().SetCreatorID(user.ID).SetRepositoryID(repository.ID).SetRefID(ref.ID))
+	if err != nil {
+		w.Error(err)
+		return
+	}
+
+	commit, err := wipCtl.Repo.ObjectRepo().Commit(ctx, wip.BaseCommit)
+	if err != nil {
+		w.Error(err)
+		return
+	}
+
+	workTree, err := versionmgr.NewWorkTree(ctx, wipCtl.Repo.ObjectRepo(), models.NewRootTreeEntry(commit.TreeHash))
+	if err != nil {
+		w.Error(err)
+		return
+	}
+
+	if bytes.Equal(commit.TreeHash, wip.CurrentTree) {
+		w.JSON([]api.Change{}) //no change return nothing
+		return
+	}
+
+	changes, err := workTree.Diff(ctx, wip.CurrentTree)
+	if err != nil {
+		w.Error(err)
+		return
+	}
+
+	var path string
+	if params.Path != nil {
+		path = *params.Path
+	}
+
+	var changesResp []api.Change
+	err = changes.ForEach(func(change versionmgr.IChange) error {
+		action, err := change.Action()
+		if err != nil {
+			return err
+		}
+		fullPath := change.Path()
+		if strings.HasPrefix(fullPath, path) {
+			apiChange := api.Change{
+				Action: int(action),
+				Path:   fullPath,
+			}
+			if change.From() != nil {
+				apiChange.BaseHash = utils.String(hex.EncodeToString(change.From().Hash()))
+			}
+			if change.To() != nil {
+				apiChange.ToHash = utils.String(hex.EncodeToString(change.To().Hash()))
+			}
+			changesResp = append(changesResp, apiChange)
+		}
+		return nil
+	})
+	if err != nil {
+		w.Error(err)
+		return
+	}
+
+	w.JSON(changes)
 }
